# Ubilog

./: .gitignore  CONTRIBUTING.md  README.md
rust/: .gitignore  Cargo.toml
rust/src/: base.rs  lib.rs  main.rs
typescript/: Dockerfile  Makefile  README.md  TODO.md  bitcons.ts  deno.json  docker-compose.yml  json.ts  keccak256.ts  litcons.ts  minheap.ts  node_0.ts  node_1.ts  node_2.ts  package.json  run.sh  ubilog.ts
typescript/src/: address.ts  cli.ts  config.ts  constants.ts  deps.ts  heap.ts  keccak256.ts  lib.ts  list.ts  networking.ts  node_0.ts  node_1.ts  node_2.ts  put_slice.ts  serialization.ts  types.ts  ubilog.ts  util.ts
typescript/src/lib/: address.ts  bit_str.ts  configinator.ts  files.ts  func.ts  heap.ts  numbers.ts  tuple.ts  util.ts
typescript/src/lib/confignator/: mod.ts  types.ts
typescript/src/lib/confignator/validators/: address.ts  base.ts  mod.ts
typescript/src/lib/func/: result.ts
typescript/src/lib/functional/: maybe.ts  mod.ts  result.ts
typescript/src/lib/numbers/: base.ts  common.ts  mod.ts  nat.ts  u16.ts  u256.ts  u64.ts  u8.ts
typescript/src/scripts/: put_slice.ts
typescript/src/types/: address.ts  base.ts  bits.ts  blockchain.ts  hash.ts  mod.ts  network.ts  networking.ts  number.ts
typescript/src/types/numbers/: mod.ts  u16.ts  u256.ts  u64.ts  u8.ts
typescript/test/: .gitignore  await_and_attach.sh  nodes.sh  stop.sh
