[package]
name = "bitcons-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bitcons"
path = "src/lib.rs"

[[bin]]
name = "bitcons-rs"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
hex-literal = "0.3.3"
bitvec = "0.20"
primitive-types = { version = "0.10.1" }
rand = "0.8.4"
sha3 = "0.9.1"
tokio = { version = "1", features = ["full"] }
